[gd_scene load_steps=4 format=3 uid="uid://15wmvodqfq3y"]

[ext_resource type="Script" uid="uid://0x10qny8aige" path="res://level.gd" id="1_oi3di"]
[ext_resource type="PackedScene" uid="uid://bqrcs2tt108s3" path="res://player/player.tscn" id="1_vonw3"]
[ext_resource type="PackedScene" uid="uid://oi0rg0scpf51" path="res://platform/platform.tscn" id="2_oi3di"]

[node name="Level" type="Node2D"]
script = ExtResource("1_oi3di")
platform_scene = ExtResource("2_oi3di")

[node name="Player" parent="." instance=ExtResource("1_vonw3")]
position = Vector2(281, 545)
JUMP_VELOCITY = -500.0

[node name="InitialPlatform" parent="." instance=ExtResource("2_oi3di")]
position = Vector2(237, 650)

[node name="PlatformSpawner" type="Timer" parent="."]

[connection signal="timeout" from="PlatformSpawner" to="." method="_on_spawn_platform"]
